syntax = "proto3";

package auth.v1;

option go_package = "github.com/yourname/project/pkg/proto/auth/v1;authv1";

service AuthService {

  rpc Register(RegisterRequest) returns (RegisterResponse) {}

  rpc Login(LoginRequest) returns (LoginResponse) {}

  rpc Access(AccessRequest) returns (AccessResponse) {}

  rpc Refresh(RefreshRequest) returns (RefreshResponse) {}

  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}


message RegisterRequest {
  string email = 1;
  string password = 2;
  string password_confirm = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AccessRequest {
  string token = 1;
}

message RefreshRequest {
  string refresh_token = 1;
}

message LogoutRequest {
  string access_token = 1;
  string refresh_token = 2;
}


message RegisterResponse {
  string user_id = 1;
  string email = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message AccessResponse {
  string user_id = 1;
  string email = 2;
  string role = 3;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message LogoutResponse {
  bool success = 1;
}